"""
Module definition for the application.
"""

module(
    name = "masterofn0n3",
)

bazel_dep(
    name = "rules_go",
    version = "0.53.0",
)

bazel_dep(
    name = "gazelle",
    version = "0.42.0",
    repo_name = "bazel_gazelle",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")